[gd_scene load_steps=6 format=3 uid="uid://ba0sl2fjk3c2p"]

[ext_resource type="Texture2D" uid="uid://il1wbcmxg3l" path="res://Assets/Sprites/UI/Ribbon_Blue_3Slides.png" id="1_1yxvv"]
[ext_resource type="Script" path="res://Scripts/credits.gd" id="1_qn6jt"]
[ext_resource type="FontFile" uid="uid://c4ubi6ftcm5ix" path="res://Assets/Fonts/The Wild Breath of Zelda.otf" id="2_ttnc5"]
[ext_resource type="Theme" uid="uid://c0bljv12kjjb" path="res://Themes/UI_Main_Theme.tres" id="3_gfyrp"]
[ext_resource type="AudioStream" uid="uid://bmauphepfu15c" path="res://Assets/Audio/UI/Modern6.ogg" id="5_d3jhv"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qn6jt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.278431, 0.670588, 0.662745, 1)

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -394.0
offset_top = -415.5
offset_right = 394.0
offset_bottom = 415.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("1_1yxvv")

[node name="Label" type="Label" parent="CanvasLayer/GridContainer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = -51.5
offset_right = 96.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ttnc5")
theme_override_font_sizes/font_size = 70
text = "Credits"

[node name="PanelContainer_Images" type="PanelContainer" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = ExtResource("3_gfyrp")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GridContainer/PanelContainer_Images"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Title" type="Label" parent="CanvasLayer/GridContainer/PanelContainer_Images/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0862745, 0.109804, 0.180392, 1)
theme_override_font_sizes/font_size = 50
text = "Sprites, Tiles and UI"

[node name="Credit_01" type="Label" parent="CanvasLayer/GridContainer/PanelContainer_Images/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.411765, 0.509804, 1)
theme_override_font_sizes/font_size = 40
text = "Pixel Frog"
horizontal_alignment = 1

[node name="Credit_02" type="Label" parent="CanvasLayer/GridContainer/PanelContainer_Images/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.411765, 0.509804, 1)
theme_override_font_sizes/font_size = 40
text = "ElvGames"
horizontal_alignment = 1

[node name="PanelContainer_GameDesing" type="PanelContainer" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = ExtResource("3_gfyrp")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GridContainer/PanelContainer_GameDesing"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Title" type="Label" parent="CanvasLayer/GridContainer/PanelContainer_GameDesing/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0862745, 0.109804, 0.180392, 1)
theme_override_font_sizes/font_size = 50
text = "Game design and programming"
horizontal_alignment = 1

[node name="Credit_01" type="Label" parent="CanvasLayer/GridContainer/PanelContainer_GameDesing/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.411765, 0.509804, 1)
theme_override_font_sizes/font_size = 40
text = "Federico Eigler"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer2" type="GridContainer" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -466.0
offset_top = -396.0
offset_bottom = 435.0
grow_horizontal = 0
grow_vertical = 2

[node name="PanelContainer_Music" type="PanelContainer" parent="CanvasLayer/GridContainer2"]
layout_mode = 2
theme = ExtResource("3_gfyrp")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GridContainer2/PanelContainer_Music"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Title" type="Label" parent="CanvasLayer/GridContainer2/PanelContainer_Music/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0862745, 0.109804, 0.180392, 1)
theme_override_font_sizes/font_size = 50
text = "Music and SFX"

[node name="Credit_01" type="Label" parent="CanvasLayer/GridContainer2/PanelContainer_Music/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.411765, 0.509804, 1)
theme_override_font_sizes/font_size = 40
text = "ZapSplat"
horizontal_alignment = 1

[node name="Credit_02" type="Label" parent="CanvasLayer/GridContainer2/PanelContainer_Music/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.411765, 0.509804, 1)
theme_override_font_sizes/font_size = 40
text = "Mayra"
horizontal_alignment = 1

[node name="Credit_03" type="Label" parent="CanvasLayer/GridContainer2/PanelContainer_Music/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.411765, 0.509804, 1)
theme_override_font_sizes/font_size = 40
text = "Nathan Gibson"
horizontal_alignment = 1

[node name="Credit_04" type="Label" parent="CanvasLayer/GridContainer2/PanelContainer_Music/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.411765, 0.509804, 1)
theme_override_font_sizes/font_size = 40
text = "Dillon Becker"
horizontal_alignment = 1

[node name="Credit_05" type="Label" parent="CanvasLayer/GridContainer2/PanelContainer_Music/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.411765, 0.509804, 1)
theme_override_font_sizes/font_size = 40
text = "Shononoki"
horizontal_alignment = 1

[node name="Credit_06" type="Label" parent="CanvasLayer/GridContainer2/PanelContainer_Music/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.411765, 0.509804, 1)
theme_override_font_sizes/font_size = 40
text = "Cyber Apps"
horizontal_alignment = 1

[node name="PanelContainer_Fonts" type="PanelContainer" parent="CanvasLayer/GridContainer2"]
layout_mode = 2
theme = ExtResource("3_gfyrp")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GridContainer2/PanelContainer_Fonts"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Title" type="Label" parent="CanvasLayer/GridContainer2/PanelContainer_Fonts/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0862745, 0.109804, 0.180392, 1)
theme_override_font_sizes/font_size = 50
text = "Fonts"
horizontal_alignment = 1

[node name="Credit_01" type="Label" parent="CanvasLayer/GridContainer2/PanelContainer_Fonts/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.411765, 0.509804, 1)
theme_override_font_sizes/font_size = 40
text = "Chequered Ink"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_back" type="Button" parent="CanvasLayer" groups=["button"]]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = -160.0
offset_right = 322.0
offset_bottom = -77.0
grow_vertical = 0
theme = ExtResource("3_gfyrp")
text = "Back"

[node name="Button_Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_d3jhv")
bus = &"SFX"

[connection signal="pressed" from="CanvasLayer/Button_back" to="." method="_on_button_back_pressed"]
